--- a/index.html
+++ b/index.html
@@ -20,6 +20,7 @@
     </div>
 
     <div class="scroll">
+      <section class="pages" id = "picture"></section>
       <section class="pages" id="about">
         <h2>About me</h2>
       </section>
