--- a/index.html
+++ b/index.html
@@ -15,23 +15,60 @@
       <nav>
         <a href="#about" id="ab">About Me</a>
         <a href="#portfolio" id="port">Portfolio</a>
-        <a href="#resume" id="res">Resume</a>
+        <a href="#connect" id="res">Connect</a>
       </nav>
     </div>
 
     <div class="scroll">
-      <section class="pages" id = "picture"></section>
       <section class="pages" id="about">
         <h2>About me</h2>
+        <div id="picture">
+          <img class="picture" src="images/sc-pic2.jpg" align="middle"></img>
+        </div>
+        <div class="info">
+          <p class="line">__________________________________________________________________________________________________</p>
+          <p>Amarinder Pandher | Full Stack Web Developer | Pun Enthusiast</p>
+          <p>Introduction will go here</p>
+        </div>
       </section>
       <section class="pages" id="portfolio">
         <h2>Portfolio</h2>
+        <div class="content">
+          <div class="part1">
+            <p>Hangman</p>
+            <p>Created using JavaScript, HTML5, CSS3, JQuery</p>
+            <p>Can be played with 1 or 2 people
+            <p><a href="https://github.com/Amarinder1/Hangman1" target="_blank">Link to the code</a></p>
+            <p><a href="https://amarinder1.github.io/Hangman1/homepage/" target="_blank">Link to deployed app</a></p>
+          </div>
+          <div class="part2">
+            <p>Amazon Web Store</p>
+            <p>Created using Ruby, Rails, HTML5, CSS3</p>
+            <p>Allows you to sign up/log in, views items, add them to your cart, and checkout your cart</p>
+            <p><a href="https://github.com/Amarinder1/Project2-Amazon" target="_blank">Link to the code</a></p>
+            <p><a href="https://amarinder-amazon.herokuapp.com/" target="_blank">Link to deployed app</a></p>
+          </div>
+          <div class="part3">
+            <p>Project 3</p>
+          </div>
+          <div class="part4">
+            <p>Project 4</p>
+          </div>
+      </div>
       </section>
-      <section class="pages" id="resume">
-        <h2>Resume</h2>
+      <section class="pages" id="connect">
+        <h2>Connect</h2>
+        <p>Email: <span>amarinder_pandher@yahoo.com</span></p>
+        <p>Phone Number: <span>240-423-6498</span></p>
+        <a href="https://www.linkedin.com/in/amarinder-pandher/" target="_blank">Linked-In Profile</a>
+        <a href="https://github.com/Amarinder1" target="_blank">GitHub Profile</a>
+        <p><a href="https://docs.google.com/document/d/13YQ70DHc0vNVt0cFiBV6OvW3CwMIkYZZ5xxdWmIPasQ/edit?usp=sharing" target="_blank">Resume</a></p>
       </section>
     </div>
-
+    <script
+  src="https://code.jquery.com/jquery-3.2.1.min.js"
+  integrity="sha256-hwg4gsxgFZhOsEEamdOYGBf13FyQuiTwlAQgxVSNgt4="
+  crossorigin="anonymous"></script>
     <script src="script.js"></script>
   </body>
 </html>
