--- a/index.html
+++ b/index.html
@@ -28,7 +28,7 @@
         <div class="info">
           <p class="line">__________________________________________________________________________________________________</p>
           <p>Amarinder Pandher | Full Stack Web Developer | Pun Enthusiast</p>
-          <p>Introduction will go here</p>
+          <p>A detail-oriented web developer who strives to build intuitive programs by combining functionality with a sleek design. I excel in high-pressure situations and never back down from a challenge.</p>
         </div>
       </section>
       <section class="pages" id="portfolio">
@@ -58,11 +58,11 @@
       </section>
       <section class="pages" id="connect">
         <h2>Connect</h2>
-        <p>Email: <span>amarinder_pandher@yahoo.com</span></p>
-        <p>Phone Number: <span>240-423-6498</span></p>
-        <a href="https://www.linkedin.com/in/amarinder-pandher/" target="_blank">Linked-In Profile</a>
-        <a href="https://github.com/Amarinder1" target="_blank">GitHub Profile</a>
-        <p><a href="https://docs.google.com/document/d/13YQ70DHc0vNVt0cFiBV6OvW3CwMIkYZZ5xxdWmIPasQ/edit?usp=sharing" target="_blank">Resume</a></p>
+        <p class="email">Email: <span>amarinder_pandher@yahoo.com</span></p>
+        <p class="phone">Phone Number: <span>240-423-6498</span></p>
+        <a class="link" href="https://www.linkedin.com/in/amarinder-pandher/" target="_blank">Linked-In Profile</a>
+        <a class="git" href="https://github.com/Amarinder1" target="_blank">GitHub Profile</a>
+        <p class="resume"><a href="https://docs.google.com/document/d/13YQ70DHc0vNVt0cFiBV6OvW3CwMIkYZZ5xxdWmIPasQ/edit?usp=sharing" target="_blank">Resume</a></p>
       </section>
     </div>
     <script
