added project 3, resume in nav bar, and did styling when window shrinks

--- a/index.html
+++ b/index.html
@@ -13,19 +13,20 @@
         <a href="#about" id="ab">About Me</a>
         <a href="#portfolio" id="port">Portfolio</a>
         <a href="#connect" id="res">Connect</a>
+        <a href="#connect" id="res">Resume</a>
       </nav>
     </div>
 
     <div class="scroll">
       <section class="pages" id="about">
         <h2>About me</h2>
-        <div id="picture">
-          <img class="picture" src="images/sc-pic2.jpg" align="middle"></img>
+        <div class="pic">
+          <img class="picture" src="images/sc-pic2.jpg"></img>
         </div>
         <div class="info">
-          <p class="line">__________________________________________________________________________________________________</p>
+          <p class="line">_____________________________________________________________</p>
           <p>Amarinder Pandher | Full Stack Web Developer | Pun Enthusiast</p>
-          <p>A detail-oriented web developer who strives to build intuitive programs by combining functionality with a sleek design. I excel in high-pressure situations and never back down from a challenge.</p>
+          <p class="brand">A detail-oriented web developer who strives to build intuitive programs by combining functionality with a sleek design. I excel in high-pressure situations and never back down from a challenge.</p>
         </div>
       </section>
       <section class="pages" id="portfolio">
@@ -42,6 +43,7 @@
             </div>
           </div>
           <div class="project2">
+            <img class="pj2" src="images/pj2.jpg"></img>
             <div class="info2">
               <p class="title">Amazon Web Store</p>
               <p>Created using Ruby, Rails, HTML5, CSS3</p>
@@ -50,12 +52,23 @@
               <p><button class="amazon" onclick="window.open('https://amarinder-amazon.herokuapp.com/')">Time to go shopping!</button></p>
               <p><button class="amazon-code" onclick="window.open('https://github.com/Amarinder1/Project2-Amazon')">Check out the code!</button></p>
             </div>
-            <img class="pj2" src="images/pj2.jpg"></img>
           </div>
           <div class="project3">
-            <p>Project 3</p>
+            <img class="pj3" src="images/pj3.jpg"></img>
+            <div class="info3">
+              <p class="title">iDidit</p>
+              <p>Created using Express and MongoDB as the back end</p>
+              <p>and using Node and React for the front end</p>
+              <p>Incorporated Okata for user authorization</p>
+              <p>And Twilio and Cron for scheduled text messages</p>
+              <p>User can sign in through octa, edit their account, </p>
+              <p>create/delete tasks and recieve text messages</p>
+              <p><button class="ididit" onclick="window.open('http://ididit.surge.sh/')">Stop Procastinating Today!</button></p>
+              <p><button class="front" onclick="window.open('https://github.com/Gripholder/project3-frontend')">Check out the front-end code!</button></p>
+              <p><button class="back" onclick="window.open('https://github.com/Amarinder1/Project3-Backend')">Check out the back-end code!</button></p>
+            </div>
           </div>
-      </div>
+        </div>
       </section>
       <section class="pages" id="connect">
         <h2>Connect</h2>
@@ -86,7 +99,7 @@
           </div>
           <div class="icons">
             <div class="res-icon">
-              <a class="resume" href="https://docs.google.com/document/d/13YQ70DHc0vNVt0cFiBV6OvW3CwMIkYZZ5xxdWmIPasQ/edit?usp=sharing" target="_blank"><i class="fa fa-file-text fa-5x" aria-hidden="true"></i></a>
+              <a class="resume" href="https://docs.google.com/document/d/1BJAcIb5Edo3wuQMFuIo5I2g3Zwg2L3ZGo-3nnzxL7Ek/edit?usp=sharing" target="_blank"><i class="fa fa-file-text fa-5x" aria-hidden="true"></i></a>
             </div>
             <div class="res-text">
               Resume
