--- a/index.html
+++ b/index.html
@@ -25,7 +25,7 @@
         </div>
         <div class="info">
           <p class="line">_____________________________________________________________</p>
-          <p>Amarinder Pandher | Full Stack Web Developer | Pun Enthusiast</p>
+          <p class="tag">Amarinder Pandher | Full Stack Web Developer | Pun Enthusiast</p>
           <p class="brand">A detail-oriented web developer who strives to build intuitive programs by combining functionality with a sleek design. I excel in high-pressure situations and never back down from a challenge.</p>
         </div>
       </section>
