--- a/index.html
+++ b/index.html
@@ -18,6 +18,8 @@
     </div>
 
     <div class="scroll">
+      <section class="pages" id="landing">
+      </section>
       <section class="pages" id="about">
         <h2>About me</h2>
         <div class="pic">
