--- a/index.html
+++ b/index.html
@@ -19,6 +19,8 @@
 
     <div class="scroll">
       <section class="pages" id="landing">
+        <p class="name">Amarinder Singh Pandher</p>
+        <p class="tag">Full Stack Web Developer | Pun Enthusiast</p>
       </section>
       <section class="pages" id="about">
         <h2>About me</h2>
@@ -26,9 +28,10 @@
           <img class="picture" src="images/sc-pic2.jpg"></img>
         </div>
         <div class="info">
-          <p class="line">_____________________________________________________________</p>
-          <p class="tag">Amarinder Pandher | Full Stack Web Developer | Pun Enthusiast</p>
-          <p class="brand">A detail-oriented web developer who strives to build intuitive programs by combining functionality with a sleek design. I excel in high-pressure situations and never back down from a challenge.</p>
+          <p class="line">_______________________________________________________</p>
+          <div class="container">
+            <p class="brand">A detail-oriented web developer who strives to build intuitive programs by combining functionality with a sleek design. I excel in high-pressure situations and never back down from a challenge.</p>
+          </div>
         </div>
       </section>
       <section class="pages" id="portfolio">
@@ -38,8 +41,8 @@
             <img class="pj1" src="images/pj1.jpg"></img>
             <div class="info1">
               <p class="title">League of Hangman</p>
-              <p>Created using JavaScript, HTML5, CSS3, JQuery</p>
-              <p>Can be played with 1 or 2 people
+              <p>Classic hangman game with the option to play with 1 or 2 people.</p>
+              <p class="tech">Created using JavaScript, HTML5, CSS3, JQuery.</p>
               <p><button class="hang" onclick="window.open('https://amarinder1.github.io/Hangman1/homepage/')">Play the Game!</button></p>
               <p><button class="hang-code" onclick="window.open('https://github.com/Amarinder1/Hangman1')">Check out the code!</button></p>
             </div>
@@ -48,9 +51,8 @@
             <img class="pj2" src="images/pj2.jpg"></img>
             <div class="info2">
               <p class="title">Amazon Web Store</p>
-              <p>Created using Ruby, Rails, HTML5, CSS3</p>
-              <p>Allows you to sign up/log in, views items, add them to your cart</p>
-              <p>and checkout your cart</p>
+              <p>An online web store that allows you to sign up/log in, views items, <br>add them to your cart, and to check out your items.</p>
+              <p class="tech">Created using Ruby, Rails, HTML5, CSS3.</p>
               <p><button class="amazon" onclick="window.open('https://amarinder-amazon.herokuapp.com/')">Time to go shopping!</button></p>
               <p><button class="amazon-code" onclick="window.open('https://github.com/Amarinder1/Project2-Amazon')">Check out the code!</button></p>
             </div>
@@ -59,15 +61,25 @@
             <img class="pj3" src="images/pj3.jpg"></img>
             <div class="info3">
               <p class="title">iDidit</p>
-              <p>Created using Express and MongoDB as the back end</p>
-              <p>and using Node and React for the front end</p>
-              <p>Incorporated Okata for user authorization</p>
-              <p>And Twilio and Cron for scheduled text messages</p>
-              <p>User can sign in through octa, edit their account, </p>
-              <p>create/delete tasks and recieve text messages</p>
+              <p>Stop procrastinating today. Sign up to add a task that needs to be finished <br>
+              and recieve text message reminders until you finish that task.</p>
+              <p class="tech">Created using Express and MongoDB for the back end<br>
+              and using Node and React for the front end.<br>
+              Incorporated Okata for user authorization<br>
+              and Twilio and Cron for scheduled text messages.</p>
               <p><button class="ididit" onclick="window.open('http://ididit.surge.sh/')">Stop Procastinating Today!</button></p>
               <p><button class="front" onclick="window.open('https://github.com/Gripholder/project3-frontend')">Check out the front-end code!</button></p>
               <p><button class="back" onclick="window.open('https://github.com/Amarinder1/Project3-Backend')">Check out the back-end code!</button></p>
+            </div>
+          </div>
+          <div class="project4">
+            <img class="pj4" src="images/pj4.jpg"></img>
+            <div class="info4">
+              <p class="title">Coffee Shop Locater</p>
+              <p>Search anywhere in the United Staes and find the closest coffee shops within a mile of your search location!</p>
+              <p class="tech">Created using JavaScript, HTMl5, CSS3, JQuery, and Google Maps API<br>
+              <p><button class="coffee" onclick="window.open('https://amarinder1.github.io/Project4/')">Find the nearest coffee shop!</button></p>
+              <p><button class="coffee-code" onclick="window.open('https://github.com/Amarinder1/Project4')">Check out the front-end code!</button></p>
             </div>
           </div>
         </div>
