--- a/index.html
+++ b/index.html
@@ -52,7 +52,7 @@
             <div class="info2">
               <p class="title">Amazon Web Store</p>
               <p>An online web store that allows you to sign up/log in, views items, <br>add them to your cart, and to check out your items.</p>
-              <p class="tech">Created using Ruby, Rails, HTML5, CSS3.</p>
+              <p class="tech">Created using Ruby, Rails, HTML5, CSS3. Uses PostgreSQL as a relational database</p>
               <p><button class="amazon" onclick="window.open('https://amarinder-amazon.herokuapp.com/')">Time to go shopping!</button></p>
               <p><button class="amazon-code" onclick="window.open('https://github.com/Amarinder1/Project2-Amazon')">Check out the code!</button></p>
             </div>
