removed project 3 button

--- a/index.html
+++ b/index.html
@@ -67,7 +67,7 @@
               and using Node and React for the front end.<br>
               Incorporated Okata for user authorization<br>
               and Twilio and Cron for scheduled text messages.</p>
-              <p><button class="ididit" onclick="window.open('http://ididit.surge.sh/')">Stop Procastinating Today!</button></p>
+              <!-- <p><button class="ididit" onclick="window.open('http://ididit.surge.sh/')">Stop Procastinating Today!</button></p> -->
               <p><button class="front" onclick="window.open('https://github.com/Gripholder/project3-frontend')">Check out the front-end code!</button></p>
               <p><button class="back" onclick="window.open('https://github.com/Amarinder1/Project3-Backend')">Check out the back-end code!</button></p>
             </div>
