--- a/index.html
+++ b/index.html
@@ -52,7 +52,7 @@
             <div class="info2">
               <p class="title">Amazon Web Store</p>
               <p>An online web store that allows you to sign up/log in, views items, <br>add them to your cart, and to check out your items.</p>
-              <p class="tech">Created using Ruby, Rails, HTML5, CSS3. Uses ActiveRecord as a relational database</p>
+              <p class="tech">Created using Ruby on Rails, CSS3 and the Devise Gem. Uses PostGreSQL as a relational database and Active Record as ORM</p>
               <p><button class="amazon" onclick="window.open('https://amarinder-amazon.herokuapp.com/')">Time to go shopping!</button></p>
               <p><button class="amazon-code" onclick="window.open('https://github.com/Amarinder1/Project2-Amazon')">Check out the code!</button></p>
             </div>
@@ -63,9 +63,9 @@
               <p class="title">iDidit</p>
               <p>Stop procrastinating today. Sign up to add a task that needs to be finished <br>
               and recieve text message reminders until you finish that task.</p>
-              <p class="tech">Created using Express and MongoDB for the back end<br>
-              and using Node and React for the front end.<br>
-              Incorporated Okata for user authorization<br>
+              <p class="tech">Created using Express, Node, and MongoDB for the back end<br>
+              and React for the front end.<br>
+              Incorporated Okta for user authorization<br>
               and Twilio and Cron for scheduled text messages.</p>
               <!-- <p><button class="ididit" onclick="window.open('http://ididit.surge.sh/')">Stop Procastinating Today!</button></p> -->
               <p><button class="front" onclick="window.open('https://github.com/Gripholder/project3-frontend')">Check out the front-end code!</button></p>
