--- a/index.html
+++ b/index.html
@@ -113,7 +113,7 @@
           </div>
           <div class="icons">
             <div class="res-icon">
-              <a class="resume" href="https://docs.google.com/document/d/1BJAcIb5Edo3wuQMFuIo5I2g3Zwg2L3ZGo-3nnzxL7Ek/edit?usp=sharing" target="_blank"><i class="fa fa-file-text fa-5x" aria-hidden="true"></i></a>
+              <a class="resume" href="ResumePDF.pdf" target="_blank"><i class="fa fa-file-text fa-5x" aria-hidden="true"></i></a>
             </div>
             <div class="res-text">
               Resume
